--- a/public/503.html
+++ b/public/503.html
@@ -1,38 +1,26 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RailsPlay</title>
-
-  <style type="text/css">
-    body {
-      background-color: #fff;
-      color: #666;
-      font-family: arial, sans-serif;
-      text-align: center;
-    }
-    
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>RailsPlay is under maintenance (503)</title>
+<style type="text/css">
+    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
-      border: 1px solid #ccc;
-      border-bottom-color: #999;
-      border-right-color: #999;
-      margin: 4em auto 0 auto;
+      width: 35em;
       padding: 0 4em;
-      width: 25em;
+      margin: 4em auto 0 auto;
+      border: 1px solid #ccc;
+      border-right-color: #999;
+      border-bottom-color: #999;
     }
-
-    h1 {
-      color: #f00;
-      font-size: 100%;
-      line-height: 1.5em;
-    }
+    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
   </style>
 </head>
-
 <body>
   <div class="dialog">
-    <h1>RailsPlay</h1>
-    <p>Estamos em manutenção, voltaremos em breve.</p>
-    <p>Previsão para retorno em {DATETIME_SITE_BACK_ONLINE}</p>
+    <h1>RailsPlay is currently under maintenance.</h1>
+    <p>We are sorry for the inconvenience.<br>You might want to wait a little until the problem gets fixed.</p>
   </div>
 </body>
 </html>
